<resources>
    <string name="app_name">BLEController</string>
    <string name="speed_label">Speed: </string>
    <string name="front_sonar_label">LEFT ENC: </string>
    <string name="rear_sonar_label">RIGHT ENC: </string>
    <string name="decode_label">CMD: </string>
    <string name="init_value">N/A</string>
    <string name="steering_label">Steering: </string>
    <string name="action_settings">Settings</string>
    <string name="activity_scan">Scan Available Device </string>
    <string name="scan_btn">Scan</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="stop_scan">Stop Scanning</string>
    <string name="decode_error">DECODE ERROR</string>
    <string name="decode_success">DECODE SUCCESS</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="error_bluetooth_not_supported">Bluetooth NOT supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="connection_err">Connection error</string>
    <string name="bt_support_err">Bluetooth not supported</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_service">Unknown service</string>
</resources>
